[gd_scene format=3 uid="uid://cgq1u04ptsqcq"]

[ext_resource type="PackedScene" uid="uid://rw0txvf2lw6j" path="res://Entities/MenuObjects/general_popup_menu.tscn" id="1_j8k5f"]
[ext_resource type="Script" uid="uid://cc7eohq2u77e7" path="res://Scripts/Menu/slider_popup_menu.gd" id="2_ckswm"]
[ext_resource type="FontFile" uid="uid://ml62eqfe7avn" path="res://Graphics/Fonts/small_font.png" id="2_v2yco"]
[ext_resource type="Texture2D" uid="uid://bf2lhfxal46gj" path="res://Graphics/Menus/ButtonUp.png" id="3_ckswm"]
[ext_resource type="Texture2D" uid="uid://ddug2c5c54nvl" path="res://Graphics/Menus/ButtonDown.png" id="4_uthpa"]
[ext_resource type="Texture2D" uid="uid://c2xdraklm0ah7" path="res://Graphics/title/TitleMenu.png" id="6_ckswm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eu4y8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pn5gd"]
texture = ExtResource("3_ckswm")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yc2j2"]
texture = ExtResource("3_ckswm")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wealy"]
texture = ExtResource("4_uthpa")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eu4y8"]
bg_color = Color(0, 0.93333334, 0, 1)
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uthpa"]
bg_color = Color(1, 1, 1, 1)
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckswm"]
bg_color = Color(0.4, 0.4, 0.4, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0076186024, 0.0076186024, 0.0076186024, 1)
corner_detail = 1
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_6bx2a"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 8
Button/fonts/font = ExtResource("2_v2yco")
Button/styles/hover = SubResource("StyleBoxTexture_pn5gd")
Button/styles/normal = SubResource("StyleBoxTexture_yc2j2")
Button/styles/pressed = SubResource("StyleBoxTexture_wealy")
HSlider/icons/grabber = ExtResource("6_ckswm")
HSlider/icons/grabber_highlight = ExtResource("6_ckswm")
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_eu4y8")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_uthpa")
HSlider/styles/slider = SubResource("StyleBoxFlat_ckswm")
VSlider/icons/grabber = ExtResource("6_ckswm")
VSlider/icons/grabber_highlight = ExtResource("6_ckswm")

[sub_resource type="LabelSettings" id="LabelSettings_v2yco"]
line_spacing = 0.0
font = ExtResource("2_v2yco")
font_size = 8
font_color = Color(0.53333336, 0.53333336, 0.53333336, 1)

[node name="GeneralPopupMenu" unique_id=1743264185 instance=ExtResource("1_j8k5f")]
script = ExtResource("2_ckswm")

[node name="MenuOptions" type="Panel" parent="Panel/NinePatchRect" parent_id_path=PackedInt32Array(474981065) index="0" unique_id=2095089514]
layout_mode = 0
offset_right = 144.0
offset_bottom = 68.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_eu4y8")

[node name="HSlider" type="HSlider" parent="Panel/NinePatchRect/MenuOptions" index="0" unique_id=119105605]
layout_mode = 0
offset_left = 8.0
offset_top = 20.0
offset_right = 136.0
offset_bottom = 36.0
theme = SubResource("Theme_6bx2a")
tick_count = 1

[node name="AcceptButton" type="Button" parent="Panel/NinePatchRect/MenuOptions" index="1" unique_id=323654261]
self_modulate = Color(0, 0.93333334, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 44.0
offset_right = 72.0
offset_bottom = 68.0
theme = SubResource("Theme_6bx2a")
text = "accept"

[node name="Label" type="Label" parent="Panel/NinePatchRect/MenuOptions/AcceptButton" index="0" unique_id=959514356]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 16.0
text = "Accept"

[node name="CancelButton" type="Button" parent="Panel/NinePatchRect/MenuOptions" index="2" unique_id=2116592866]
self_modulate = Color(0.93333334, 0.13333334, 0.4, 1)
layout_mode = 0
offset_left = 72.0
offset_top = 44.0
offset_right = 136.0
offset_bottom = 68.0
theme = SubResource("Theme_6bx2a")
text = "cancel"

[node name="Label2" type="Label" parent="Panel/NinePatchRect/MenuOptions/CancelButton" index="0" unique_id=444111903]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 16.0
text = "Cancel"

[node name="Label" type="Label" parent="Panel/NinePatchRect/MenuOptions" index="3" unique_id=1443699236]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 12.0
text = "TITLE VALUE"
label_settings = SubResource("LabelSettings_v2yco")

[connection signal="value_changed" from="Panel/NinePatchRect/MenuOptions/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/NinePatchRect/MenuOptions/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/MenuOptions/CancelButton" to="." method="_on_cancel_button_pressed"]
